# TspMetaheuristic

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  DataGenerator.cpp  DataGenerator.h  ProblemSolver.cpp  ProblemSolver.h  Runner.cpp  Runner.h  config.json  main.cpp
results/: 170_t08_a0999_nn.csv  170_t08_a099_nn.csv  170_t08_a099_ord.csv  170_t099_a099_nn.csv  403_t08_a0999_nn.csv  403_t08_a099_nn.csv  403_t08_a099_ord.csv  403_t099_a099_nn.csv  47_t08_a0999_nn.csv  47_t08_a099_nn.csv  47_t08_a099_ord.csv  47_t099_a099_nn.csv
